<resources>
    <string name="app_name">BloodTestTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bloodtest_item_text">BloodTest</string>
    <string name="patient_item_text">Patient</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="patient_names">Names: </string>
    <string name="patient_name_template">Name: %1$s</string>
    <string name="patient_names_template">Names: %1$s %2$s</string>
    <string name="patient_surname">Surname: </string>
    <string name="patient_surname_template">Surname: %1$s</string>
    <string name="names_template">Names: %1$s %2$s</string>
    <string name="patient_birth_date">Birth_date</string>
    <string name="patient_tests">Tests</string>
    <string name="patient_graphs">Graphs</string>
    <string name="patient_list">Patient list</string>
    <string name="random_patient">Dummy Patient</string>
    <string name="title_activity_patient_list">PatientListActivity</string>
    <string name="blood_tests">Blood tests</string>
    <string name="graphs">Graphs</string>
    <string name="birth_date">Birth date: </string>
    <string name="age">Age: </string>
    <string name="sex">Sex: </string>
    <string name="title_activity_blood_test_list">BloodTestListActivity</string>
    <string name="title_activity_graphs_list">GraphsListActivity</string>
    <string name="title_activity_blood_test">BloodTestActivity</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="patient_title_name_template">%1$s %2$s %3$s</string>
    <string name="patient_title_name_short_template">%1$s %2$s</string>
    <plurals name="patient_birth_date_age_template">
        <item quantity="one">%1$s (%2$d year)</item>
        <item quantity="other">%1$s (%2$d years)</item>
    </plurals>
    <string name="patient_birth_date_template">Birth date: %1$s</string>
    <plurals name="patient_age_template">
        <item quantity="one">Age: %1$d year</item>
        <item quantity="other">Age: %1$d years</item>
    </plurals>
    <string name="date">Date: </string>
    <string name="date_template">Date: %1$s</string>
    <string name="red_blood_cells">RBC: </string>
    <string name="red_blood_cells_template">RBC: %1$s</string>
    <string name="white_blood_cells">WBC: </string>
    <string name="white_blood_cells_template">WBC: %1$s</string>
    <string name="platelets">PLT: </string>
    <string name="platelets_template">PLT: %1$s</string>
    <string name="hemoglobin">HGB: </string>
    <string name="hemoglobin_template">HGB: %1$s</string>
    <string name="hematocrit">HCT: </string>
    <string name="hematocrit_template">HCT: %1$s</string>
    <string name="mean_corpuscular_volume">MCV: </string>
    <string name="mean_corpuscular_volume_template">MCV: %1$s</string>
    <string name="mean_corpuscular_hemoglobin">MCH: </string>
    <string name="mean_corpuscular_hemoglobin_template">MCH: %1$s</string>
    <string name="mean_corpuscular_hemoglobin_concentration">MCHC: </string>
    <string name="mean_corpuscular_hemoglobin_concentration_template">MCHC: %1$s</string>
    <string name="mean_platelet_volume">MPV: </string>
    <string name="mean_platelet_volume_template">MPV: %1$s</string>
    <string name="red_cell_distribution_width">RDW: </string>
    <string name="red_cell_distribution_width_template">RDW: %1$s</string>
    <string name="neutrophil_count">NE#: </string>
    <string name="neutrophil_count_template">NE#: %1$s</string>
    <string name="basophil_count">BA#: </string>
    <string name="basophil_count_template">BA#: %1$s</string>
    <string name="eosinophil_count">EO#: </string>
    <string name="eosinophil_count_template">EO#: %1$s</string>
    <string name="lymphocyte_count">LY#: </string>
    <string name="lymphocyte_count_template">LY#: %1$s</string>
    <string name="monocyte_count">MO#: </string>
    <string name="monocyte_count_template">MO#: %1$s</string>
    <string name="neutrophil_percent">NE%%: </string>
    <string name="neutrophil_percent_template">NE%%: %1$s</string>
    <string name="basophil_percent">BA%%: </string>
    <string name="basophil_percent_template">BA%%: %1$s</string>
    <string name="eosinophil_percent">EO%%: </string>
    <string name="eosinophil_percent_template">EO%%: %1$s</string>
    <string name="lymphocyte_percent">LY%%: </string>
    <string name="lymphocyte_percent_template">LY%%: %1$s</string>
    <string name="monocyte_percent">MO%%: </string>
    <string name="monocyte_percent_template">MO%%: %1$s</string>
    <string name="dash">—</string>
    <string name="title_activity_graph_list">GraphListActivity</string>
</resources>
