<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_blood_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BloodTestActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/test_date_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/date"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/red_blood_cells_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/red_blood_cells"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/white_blood_cells_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/white_blood_cells"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/platelets_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/platelets"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hemoglobin_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hemoglobin"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hematocrit_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hematocrit"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mean_corpuscular_volume_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/mean_corpuscular_volume"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mean_corpuscular_hemoglobin_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/mean_corpuscular_hemoglobin"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mean_corpuscular_hemoglobin_concentration_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/mean_corpuscular_hemoglobin_concentration"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/red_cell_distribution_width_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/red_cell_distribution_width"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mean_platelet_volume_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/mean_platelet_volume"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/neutrophil_count_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/neutrophil_count"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/basophil_count_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/basophil_count"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eosinophil_count_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/eosinophil_count"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lymphocyte_count_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/lymphocyte_count"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/monocyte_count_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/monocyte_count"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/neutrophil_percent_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/neutrophil_percent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/basophil_percent_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/basophil_percent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eosinophil_percent_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/eosinophil_percent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lymphocyte_percent_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/lymphocyte_percent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/monocyte_percent_text"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/monocyte_percent"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
